--- a/index.html
+++ b/index.html
@@ -13,13 +13,55 @@
 <canvas id="myCanvas" width="480" height="320"></canvas>
 
 <script>
+    var ballRadius = 10;
     var canvas = document.getElementById("myCanvas");
+    var dx = 2;
+    var dy = -2;
+    function getRandomBit() {
+        return Math.round(Math.random());
+    }
+
+
+    function keyDownHandler(e) {
+        console.log(e.keyCode);
+        if (e.keyCode === 32) {
+            if (getRandomBit()) {
+                dx = -dx;
+            }
+            if (getRandomBit()) {
+                dy = -dy;
+            }
+        }
+    }
+
+    document.addEventListener("keydown", keyDownHandler, false);
     var ctx = canvas.getContext("2d");
-    ctx.beginPath();
-    ctx.rect(20, 40, 50, 50);
-    ctx.fillStyle = "#FF0000";
-    ctx.fill();
-    ctx.closePath();
+    var x = canvas.width/2;
+    var y = canvas.height-30;
+
+
+    function drawBall() {
+        ctx.beginPath();
+        ctx.arc(x, y, ballRadius, 0, Math.PI*2);
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath();
+    }
+
+    function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawBall();
+        if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
+            dx = -dx;
+        }
+        if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
+            dy = -dy;
+        }
+        x += dx;
+        y += dy;
+    }
+
+    setInterval(draw, 10);
 </script>
 
 </body>
