add a foreground, background, and change collision detection for the
ball to bounce off the foreground instead of the bottom of the canvas

--- a/index.html
+++ b/index.html
@@ -37,24 +37,46 @@
     document.addEventListener("keydown", keyDownHandler, false);
     var ctx = canvas.getContext("2d");
     var x = canvas.width/2;
-    var y = canvas.height-30;
+    var y = canvas.height/2;
+    var percentOfScreen = .2;
+    var foregroundYStart = (1 - percentOfScreen)*canvas.height;
+    var heightToFill = percentOfScreen*canvas.height;
 
+    function drawBackground() {
+        // ctx.beginPath();
+        ctx.fillStyle = "#7ec0ee";
+        ctx.fillRect(0, 0, canvas.width, foregroundYStart);
+        ctx.fill();
+        // ctx.closePath();
+    }
+
+
+    function drawForeground() {
+        // ctx.beginPath();
+        ctx.fillStyle = "green";
+        ctx.fillRect(0, foregroundYStart, canvas.width, heightToFill);
+        // ctx.fill();
+        // ctx.closePath();
+    }
 
     function drawBall() {
         ctx.beginPath();
         ctx.arc(x, y, ballRadius, 0, Math.PI*2);
-        ctx.fillStyle = "#0095DD";
+        ctx.fillStyle = "red";
         ctx.fill();
         ctx.closePath();
     }
 
     function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawBackground();
+        drawForeground();
+
         drawBall();
-        if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
+        if (x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
             dx = -dx;
         }
-        if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
+        if (y + dy > (foregroundYStart - ballRadius) || y + dy < ballRadius) {
             dy = -dy;
         }
         x += dx;
